[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "1.12.0"
serde_json = "1.0.78"
#
rbson = "2.0"
chrono = {version = "0.4.19", features = ["serde"]}
#yahoo-finance = "0.3.0"
yahoo_finance_api = "1.2.2"
tokio = { version = "0.2", features = ["full"] }

# logging lib(required)
log = "0.4"
fast_log="1.3"

# rbatis (required) default is all-database+runtime-async-std-rustls
rbatis =  { version = "^3.0", default-features = false, features = ["sqlite","runtime-async-std-rustls"] }
polars = "^0.19.1"